# MCTS_BFS_Snake

./: README.md  pyproject.toml
src/snake_mcts/: agent.py  app.py  environnement.py  util.py
tests/: test_game.py
